[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["nilton seixas <nfsseixas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<3.12"
dvc = "^3.12.0"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
bs4 = "^0.0.1"
lxml = "^4.9.3"
tensorflow = "^2.13.0"
tensorflow-hub = "^0.14.0"
bert = "^2.2.0"
bert-tensorflow = "^1.0.4"
bert-for-tf2 = "^0.14.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
